[package]
name = "postgang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking", "json"] }
chrono = { version = "0.4", default-features = false, features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
icalendar = { version = "0.15", default-features = false }
clap = { version = "4.2", features = ["derive", "env", "cargo"] }

[profile.release]
opt-level = 'z' # Optimize for size
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"
